# bzip3

./: .clang-format  .gitignore  BENCHMARKS.md  CMakeLists.txt  GNUMakefile  Makefile  Makefile.am  Makefile.in  NEWS  PORTING.md  README.md  bootstrap.sh  bz3cat  bz3cat.in  bz3grep  bz3grep.1  bz3grep.1.in  bz3less  bz3less.1  bz3less.1.in  bz3more  bz3more.1  bz3more.1.in  bz3most  bzip3.1  bzip3.1.in  bzip3.pc.in  cm.h  config.h.in  configure  configure.ac  crc32.h  libsais.c  main.c  mtf.h  rle.h  srt.h  test.sh
.github/workflows/: MacOS.yml  Ubuntu-x64.yml  build.yml  c-cpp.yml  freebsd.yml  release.yml
build-aux/: libtool.patch
doc/: bz3_file_format.txt  bzip3_format.md  file_format.md  high_level_format.md  low_level_format.md  overview.md
etc/: BENCHMARKS.md  bitflip.c
examples/: compress-file.c  decompress-file.c  fuzz.c  hl-api.c  shakespeare.txt.bz3
include/: cm.h  common.h  crc32.h  e8e9.h  getopt-shim.h  libbz3.h  libsais.h  lzp.h  mtf.h  rle.h  srt.h  txt.h  yarg.h
src/: cm.c  crc32.c  e8e9.c  libbz3.c  libsais.c  lzp.c  main.c  mtf.c  rle.c  srt.c  txt.c
